@@ -1,5 +1,6 @@
 package com.ep.sysinfo.MafisSyStemInfo.controller;
 
+import com.ep.sysinfo.MafisSyStemInfo.controller.GlobalException.InvalidDriveFormatException;
 import com.ep.sysinfo.MafisSyStemInfo.model.Anlage;
 import com.ep.sysinfo.MafisSyStemInfo.model.Computer;
 import com.ep.sysinfo.MafisSyStemInfo.repository.AnlageRepository;
@@ -11,6 +12,7 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort;
+import org.springframework.data.rest.webmvc.ResourceNotFoundException;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.*;
@@ -57,40 +59,52 @@ public class ComputerController extends TabellenController {
                                @RequestParam(required = false) Optional<String> sortierenNach,
                                @RequestParam(required = false) Optional<String> sortierReihenfolge,
                                @RequestParam(required = false) Optional<String> anzahlProSeite) {
-        try {
-            logger.info("Search term: {}", suchBegriff.orElse("No search.js term provided"));
-            Pageable paging = getPageable(seite.orElse(1),
-                    sortierReihenfolge.orElse("DESC"),
-                    sortierenNach.orElse("anlagenNr"),
-                    anzahlProSeite.orElse("30"));
+        logger.info("Search term: {}", suchBegriff.orElse("No search.js term provided"));
 
-            Page<Computer> computerPage = suchBegriff
-                    .filter(s -> !s.isEmpty())
-                    .map(s -> computerService.sucheComputerMitAktivenAnlagen(s, paging))
-                    .orElseGet(() -> computerService.findeComputerMitAktivenAnlagen(paging));
-            logger.info("Found {} computers matching the search.js term '{}'", computerPage.getTotalElements(), suchBegriff);
+        // Configure pagination and sorting
+        Pageable paging = getPageable(seite.orElse(1),
+                sortierReihenfolge.orElse("DESC"),
+                sortierenNach.orElse("anlagenNr"),
+                anzahlProSeite.orElse("30"));
 
-            List<Computer> computers = computerPage.getContent().stream()
-                    .peek(c -> {
-                        Anlage anlage = anlageRepository.existsAnlage(c.getAnlagenNr());
-                        if (anlage != null) {
-                            c.setAnlagenName(anlage.getAnlagenName());
-                        }
-                    })
-                    .collect(Collectors.toList());
+        // Fetch paginated computer data
+        Page<Computer> computerPage = suchBegriff
+                .filter(s -> !s.isEmpty())
+                .map(s -> computerService.sucheComputerMitAktivenAnlagen(s, paging))
+                .orElseGet(() -> computerService.findeComputerMitAktivenAnlagen(paging));
 
-            model = aktualisiereModel(model, seite.orElse(1),
-                    sortierReihenfolge.orElse("DESC"),
-                    anzahlProSeite.orElse("30"),
-                    sortierenNach.orElse(""),
-                    suchBegriff.orElse(""),
-                    computerPage.getTotalPages(),
-                    computerPage.getTotalElements());
-            model.addAttribute("computers", computers);
-        } catch (Exception e) {
-            logger.error("Fehler beim Abrufen der Computerdaten: {}", e.getMessage(), e);
-            model.addAttribute("ERROR", e.getMessage());
-        }
+        logger.info("Found {} computers matching the search term '{}'", computerPage.getTotalElements(), suchBegriff.orElse(""));
+
+        // Collect anlagenNr values
+        List<Long> anlagenNrList = computerPage.getContent().stream()
+                .map(Computer::getAnlagenNr)
+                .toList();
+
+        // Fetch and map Anlage records
+        List<Anlage> anlagenList = anlageRepository.findByAnlagenNrIn(anlagenNrList);
+        Map<Long, Anlage> anlageMap = anlagenList.stream()
+                .collect(Collectors.toMap(Anlage::getAnlagenNr, anlage -> anlage));
+
+        // Associate Computers with their Anlagen
+        List<Computer> computers = computerPage.getContent().stream()
+                .peek(c -> {
+                    Anlage anlage = anlageMap.get(c.getAnlagenNr());
+                    if (anlage != null) {
+                        c.setAnlagenName(anlage.getAnlagenName());
+                    }
+                })
+                .collect(Collectors.toList());
+
+        // Update model
+        model = aktualisiereModel(model, seite.orElse(1),
+                sortierReihenfolge.orElse("DESC"),
+                anzahlProSeite.orElse("30"),
+                sortierenNach.orElse(""),
+                suchBegriff.orElse(""),
+                computerPage.getTotalPages(),
+                computerPage.getTotalElements());
+        model.addAttribute("computers", computers);
+
         return "alleComputer";
     }
 
@@ -103,29 +117,21 @@ public class ComputerController extends TabellenController {
      */
     @GetMapping("/getComputer/{anlagenNr}")
     public String getComputer(Model model, @PathVariable Long anlagenNr) {
-        try {
-            Optional<Computer> computerOptional = Optional.ofNullable(computerRepository.findByAnlagenNr(anlagenNr));
+        // Find the computer or throw a custom exception if not found
+        Computer computer = Optional.ofNullable(computerRepository.findByAnlagenNr(anlagenNr))
+                .orElseThrow(() -> new ResourceNotFoundException("Computer mit AnlagenNr " + anlagenNr + " wurde nicht gefunden."));
 
-            if (computerOptional.isPresent()) {
-                Computer computer = computerOptional.get();
-                Anlage anlage = anlageRepository.existsAnlage(anlagenNr);
-                if (anlage != null) {
-                    computer.setAnlagenName(anlage.getAnlagenName());
-                }
-
-                // Format memory, processors, drives, video cards, etc.
-                formatComputerDetails(computer);
-
-                model.addAttribute("computer", computer);
-                return "computerInfo";
-            } else {
-                model.addAttribute("message", "Keine Information vorhanden!");
-            }
-        } catch (Exception e) {
-            logger.error("Fehler beim Abrufen der Computerdaten: {}", e.getMessage(), e);
-            model.addAttribute("message", "Es ist ein Fehler aufgetreten, bitte versuchen Sie es später erneut.");
+        // Find the associated Anlage
+        Anlage anlage = anlageRepository.existsAnlage(anlagenNr);
+        if (anlage != null) {
+            computer.setAnlagenName(anlage.getAnlagenName());
         }
-        return "response";
+        // Format details
+        formatComputerDetails(computer);
+
+        // Add the computer to the model
+        model.addAttribute("computer", computer);
+        return "computerInfo";
     }
 
     /**
@@ -134,60 +140,61 @@ public class ComputerController extends TabellenController {
      * @param computer
      */
     private void formatComputerDetails(Computer computer) {
-        computer.setMemory(joinList(splitAndTrim(computer.getMemory())));  // Join the list back to a String
-        computer.setAnzahlProcessors(joinList(splitAndTrim(computer.getProzessoren())));
-        computer.setDrivesListe(formatDrives(computer.getDrives()));
-        computer.setVideoCards(joinList(splitAndTrim(computer.getVideoCards())));
-        computer.setPhysicalDiskInformation(joinList(splitAndTrim(computer.getPhysicalDiskInformation())));
-        computer.setPrinter(joinList(splitAndTrim(computer.getPrinter())));
-        computer.setCdRomInformation(joinList(splitAndTrim(computer.getCdRomInformation())));
+        computer.setMemoryListe(splitAndTrim(computer.getMemory()));  // Join the list back to a String
+        computer.setProzessorenListe(splitAndTrim(computer.getProzessoren()));
+        computer.setDrivesListe(processDrives(computer.getDrives()));
+        computer.setVideoCardsListe(splitAndTrim(computer.getVideoCards()));
+        computer.setPhysicalDiskInformationListe(splitAndTrim(computer.getPhysicalDiskInformation()));
+        computer.setPrinterListe(splitAndTrim(computer.getPrinter()));
+        computer.setCdRomInformationListe(splitAndTrim(computer.getCdRomInformation()));
     }
 
-    // Helper method to join List<String> back into a comma-separated String
-    private String joinList(List<String> list) {
-        return String.join(", ", list);  // Joining with a comma and a space
+
+    private List<String> splitAndTrim(String input) {
+        return Optional.ofNullable(input)
+                .map(s -> Arrays.stream(s.split("\\s*,\\s*"))
+                        .map(String::trim)
+                        .toList())
+                .orElseGet(List::of);
     }
 
-    private List<String> splitAndTrim(String data) {
-        if (data == null || data.trim().isEmpty()) {
-            // Return an empty list if data is null or empty
-            return new ArrayList<>();
+    private List<String> processDrives(String drives) {
+        if (drives == null || drives.isBlank()) {
+            return List.of();
         }
-        return Arrays.asList(data.split("\\s*,\\s*"));
+
+        return Arrays.stream(drives.split("\\s*,\\s*"))
+                .map(this::formatDrive)
+                .toList();
     }
-
-
-
-    /**
-     * Formats drive information with GB units.
-     *
-     * @param drives
-     * @return
-     */
-    private List<String> formatDrives(String drives) {
-        List<String> formattedDrives = new ArrayList<>();
-        DecimalFormat formatter = new DecimalFormat("###,##0.0");
-        List<String> driveList = splitAndTrim(drives);
-
-        for (String drive : driveList) {
-            String[] driveData = drive.split("\\s");
-            StringBuilder formattedDrive = new StringBuilder();
-            boolean isSizeFound = false;
-
-            for (String data : driveData) {
-                try {
-                    long sizeInBytes = Long.parseLong(data.trim());
-                    double sizeInGB = (sizeInBytes / MEGABYTE) / 1000.0;
-                    formattedDrive.append(isSizeFound ? " Gesamtspeicher " : formatter.format(sizeInGB) + " GB Frei / ");
-                    isSizeFound = true;
-                } catch (NumberFormatException e) {
-                    formattedDrive.append(data).append(" ");
-                }
+    private String formatDrive(String drive) {
+        final double MEGABYTE = 1024 * 1024;
+        String[] parts = drive.split("\\s+");
+        StringBuilder formattedDrive = new StringBuilder();
+        boolean isFirstSize = true;
+        //NumberFormatException
+        for (String part : parts) {
+            long size = validateAndParseDriveSize(part);
+            double sizeInGb = (size / MEGABYTE) / 1000.0;
+            String formattedSize = new DecimalFormat("###,##0.0").format(sizeInGb);
+            if (isFirstSize) {
+                formattedDrive.append(formattedSize).append(" GB Frei / ");
+                isFirstSize = false;
+            } else {
+                formattedDrive.append("Gesamtspeicher ").append(formattedSize).append(" GB ");
             }
-            formattedDrives.add(formattedDrive.toString());
         }
-        return formattedDrives;
+
+        return formattedDrive.toString().trim();
     }
+
+    private long validateAndParseDriveSize(String part) {
+        if (part == null || part.isBlank()) {
+            throw new InvalidDriveFormatException("Drive size part is empty or null.");
+        }
+        return Long.parseLong(part); // Safe to parse since it passed validation
+    }
+
 
     /**
      * Search for computers by a query.
@@ -198,28 +205,14 @@ public class ComputerController extends TabellenController {
      */
     @GetMapping("/sucheComputer")
     public String search(@RequestParam(value = "search.js", required = false) String suchPattern, Model model) {
-        try {
-            // Search for computers based on the search.js term
-            List<Computer> computers = computerService.sucheComputer(suchPattern);
+        // Search for computers based on the search.js term
+        List<Computer> computers = computerService.sucheComputer(suchPattern);
+        // Add the list of computers to the model
+        model.addAttribute("computers", computers);
 
-            // Add the list of computers to the model
-            model.addAttribute("computers", computers);
-        } catch (Exception e) {
-            // Log the error and display a message to the user
-            model.addAttribute("ERROR", "Fehler bei der Suche nach Computern.");
-        }
-
-        return "alleComputer";  // Return the view name
+        return "alleComputer"; // Return the view name
     }
 
-    private void setAnlagenNames(List<Computer> computers) {
-        computers.forEach(pc -> {
-            Anlage anlage = anlageRepository.existsAnlage(pc.getAnlagenNr());
-            if (anlage != null) {
-                pc.setAnlagenName(anlage.getAnlagenName());
-            }
-        });
-    }
 
     private List<Computer> getAllSortedComputers(Sort sort) {
         List<Computer> sortedComputers = computerRepository.findAll(sort);
@@ -244,13 +237,13 @@ public class ComputerController extends TabellenController {
      */
     @GetMapping("/sortComputer/{sortBy}")
     public String sortComputer(Model model, @PathVariable String sortBy) {
-        try {
-            sortDirection = sortDirection == Sort.Direction.DESC ? Sort.Direction.ASC : Sort.Direction.DESC;
-            List<Computer> computers = getAllSortedComputers(Sort.by(sortDirection, sortBy));
-            model.addAttribute("computers", computers);
-        } catch (Exception e) {
-            logger.error("Fehler beim Sortieren der Computer: {}", e.getMessage(), e);
-        }
+        // Toggle the sort direction
+        sortDirection = sortDirection == Sort.Direction.DESC ? Sort.Direction.ASC : Sort.Direction.DESC;
+        // Fetch sorted computers
+        List<Computer> computers = getAllSortedComputers(Sort.by(sortDirection, sortBy));
+        model.addAttribute("computers", computers);
+
         return "alleComputer";
     }
+
 }
